Enrutamiento y adaptacion a EJS

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 <link rel="stylesheet" href="../css/headerSt.css">
 <link rel="stylesheet" href="../css/mainSt.css">
+<link rel="stylesheet" href="../css/components/reset.css">
 <title>Say Whisky!</title>
 <!--
         Cinzel Font & Philosopher
