--- a/public/css/headerSt.css
+++ b/public/css/headerSt.css
@@ -1,10 +1,6 @@
 *{
-    box-sizing: border-box;  
-    margin: 0px;  
-    padding: 0px;
     font-family: 'Philosopher', sans-serif;
 }
-
 
 header{
     background-color: rgba(59, 54, 54, 0.3);
@@ -25,53 +21,22 @@ body{
     background-size: cover;
 }
 
-
-ul#bar1{
-    display: flex;
-    justify-content: center;
-    
-}
-ul#bar1 li{
-    position: relative;
-    bottom: 20px;
-    font-size: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
+figure{
+    padding: 10px;
 }
 
-a, header li{
-    text-decoration: none;
-    list-style-type: none;
+figcaption {
+    display: none;
 }
 
-ul#bar2{
+.cart_container{
     display: flex;
     justify-content: right;
 }
 
-ul#bar2 li{
+#cart{
     position: relative;
-    bottom: 170px;
-    font-size: 13px;
-    margin-left: 5px;
-    margin-right: 15px;
-}
-
-.logo{
-    position: relative;
-    top: 10px;
-    margin-left: 30px;
-
-}
-
-.container__cart{
-    display: flex;
-    justify-content: right;
-}
-
-.cart{
-    position: relative;
-    bottom: 75px;
+    bottom: 6rem;
     padding: 5px;
     align-items: center;
     background-color: transparent;
@@ -85,7 +50,7 @@ form{
     position: absolute;
     width: 60px;
     height: 60px;
-    left: 49%;
+    left: 47%;
     top: 10%;
     padding: 5px;
     transform: translate(-50%,-50%);
@@ -133,4 +98,38 @@ form:hover{
 form:hover input{
     display: block;
 }
+
+nav{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+}
+
+nav#first{
+    justify-content: center;
+    position: relative;
+    bottom: 40px;
+}
+
+nav#first a{
+    padding-right: 60px;
+    font-size: 1.3em;
+}
+
+nav#second{
+    position: relative;
+    justify-content: flex-end;
+    bottom: 190px;
+    right: 10px;
+}
+
+nav#second a{
+    padding-right: 12px;
+    font-size: 0.9em;
+}
+
+
+
+
+
 
