--- a/src/views/cart/cart.ejs
+++ b/src/views/cart/cart.ejs
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <%- include('../includes/head') %> 
-    </head>
-    
-    <body>
-        <header>
-            <%- include('../includes/header') %>
-        </header>
 
-        <h1>CART PAGE</h1>
+<head>
+    <%- include('../includes/head') %>
+</head>
 
+<body>
+    <header>
+        <%- include('../includes/header') %>
+    </header>
+
+    <h1>CART PAGE</h1>
+
+    <footer>
+        <%- include('../includes/footer') %>
+    </footer>
 </body>
+
 </html>
