--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -1,28 +1,35 @@
-<figure>
-    <a href='/'><img src="../assets/LogowTag.png" alt="Logo header" width="10%" height="10%"></a>
+<figure class="logo">
+    <a href='/'><img src="../assets/LogoSVG2.svg" alt="Logo header"></a>
     <figcaption>Fig1. - LogowTag</figcaption>
 </figure>
 
 
 <nav id="first">
-    <a href="/">inicio</a></li>
-    <a href="/products">productos</a></li>
-    <a href="/aboutus">acerca de</a></li>
-</nav>
-<nav id="second">
-    <a href="/register">register</a></li>
-    <a href="/login">login</a></li>
+    <a href="/">Home</a></li>
+    <a href="/products">Products</a></li>
+    <a href="/aboutus">About Us</a></li>
 </nav>
 
-
-
-<div class="cart_container">
-    <a href="/cart" id="cart"><i class="fab fa-opencart"></i></a>
+<div class="needs">
+    <nav role='navigation' id="second">
+        <ul>
+            <li>
+                <a>
+                    <div class="box">
+                        <div class="searchBox">
+                            <input type="text">
+                            <span></span>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li><a href="#" id="ingresar"><i class="fa-solid fa-user"></i></a></a>
+                <ul>
+                    <li><a href="/register">Register</a></li>
+                    <li><a href="/login">Login</a></li>
+                </ul>
+            </li>
+            <li><a href="/cart" id="cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        </ul>
+    </nav>
 </div>
-
-
-<form action="">
-    <input type="search" placeholder="Buscar..." />
-    <i class="fa fa-search"></i>
-</form>
-
