--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -2,9 +2,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-<link rel="stylesheet" href="../css/headerSt.css">
-<link rel="stylesheet" href="../css/mainSt.css">
+<script src="https://kit.fontawesome.com/60811efc65.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="../css/headerStyle.css">
+<link rel="stylesheet" href="../css/mainStyle.css">
 <link rel="stylesheet" href="../css/components/reset.css">
+<link rel="stylesheet" href="../css/footerStyle.css">
 <title>Say Whisky!</title>
 <!--
         Cinzel Font & Philosopher
@@ -14,3 +16,4 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Philosopher&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
