--- a/src/views/website/index.ejs
+++ b/src/views/website/index.ejs
@@ -107,7 +107,7 @@
         </section>
         
         <section id="explore">
-            <img src="../assets/breath2.jpg" alt="Explore_background">
+            <img src="../assets/breath.jpg" alt="Explore_background">
             <p>The world has changed dramatically. But our quality never has.</p>
             <br>
             <p><a href="/">Explore more...</a></p>
