--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -10,11 +10,14 @@
         <%- include('../includes/header') %>
     </header>
 
-    <h1>PRODUCT_DETAIL PAGE</h1>
-
+    <h1>Profile of</h1><%=  %>
+    <p>Nombre: </p>
+    <p>Apellido: </p>
+    <p>email: </p>
+    
     <footer>
         <%- include('../includes/footer') %>
     </footer>
 </body>
-</html>
 
+</html>
