--- a/public/css/indexStyle.css
+++ b/public/css/indexStyle.css
@@ -32,7 +32,7 @@ body{
 
 .slide-container{
     display: flex;
-    margin-top: 5rem;
+    margin-top: 8rem;
     margin-left: 5rem;
     margin-right: 5rem;
 }
@@ -215,10 +215,10 @@ section#brand_cat{
 
 #calif{
     position: relative;
-    height: 50px;
-    width: 200px;
-    left: 50px;
-    bottom: 50px;
+    height: 2.5rem;
+    width: 10rem;
+    left: 2.5rem;
+    bottom: 2.5rem;
 }
 
 #calificados_1{
@@ -230,8 +230,8 @@ section#brand_cat{
 #calificados_1 article{
     display: flex;
     flex-direction: row;
-    height: 350px;
-    width: 300px;
+    height: 17.5rem;
+    width: 15rem;
     align-items: center;
     transition: 0.8s;
 }
