--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,14 +1,11 @@
-<section class="info">
+<section class="foot">
     <div class="bloqueUno">
-        <figure>
-            <a href='/'><img src="../assets/LogoSVG2.svg" alt="Logo header" width="5%" height="5%"></a>
-        </figure>
         <div id="contacts">
             <a href=''> <i class="fab fa-instagram"></i></a>
             <a href=''> <i class="fab fa-facebook-square"></i></a>
             <a href=''> <i class="fab fa-linkedin"></i></a>
         </div>
-        <div id="info">
+        <div id="informacion">
             <p><i class="far fa-envelope"></i>contacto@vinosyspirits.com</p>
             <p>Atención de Lunes a Viernes de 9 a 18 hs.</p>
             <p>0800-888-0600</p>
@@ -17,38 +14,39 @@
 
 
     <div class="bloqueDos">
-
-        <ul>
-            <p>Categorias</p>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-        </ul>
-
-        <ul>
-            <p>Ayuda</p>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-            <li><a href="/">***********</a></li>
-        </ul>
+        <figure>
+            <a href='/'><img src="../assets/LogoSVG2.svg" alt="Logo header" width="5%" height="5%"></a>
+        </figure>
+        <div>
+            <a href="/">Home</a>
+            <a href="/products">Products</a>
+            <a href="/aboutus">About us</a>
+        </div>
     </div>
 
 
     <div class="bloqueTres">
-        <p>Metodos de pago</p>
-        <i class="fab fa-cc-paypal"></i>
-        <i class="fab fa-cc-amex"></i>
-        <i class="fab fa-cc-visa"></i>
-        <i class="fab fa-cc-mastercard"></i>
-
+        <p><a href="/preguntasfrecuentes">Preguntas Frecuentes</a></p>
+        <p><a href="/envios">Envios</a></p>
+        <p>Metodos de pago:</p>
+        <div>
+            <i class="fab fa-cc-paypal"></i>
+            <i class="fab fa-cc-amex"></i>
+            <i class="fab fa-cc-visa"></i>
+            <i class="fab fa-cc-mastercard"></i>
+        </div>
     </div>
 </section>
 
 
 <section class="copyright">
-    <p>Copyright ©2020. Todos los Derechos Reservados. <a href="/">Términos & Condiciones</a> | <a href="/">Política de
-            Privacidad</a> | <a href="/">Términos & Condiciones de Compra</a></p>
+    <p>
+        Copyright ©2020. Todos los Derechos Reservados.
+
+        <a href="/tyc">Términos & Condiciones</a>
+        |
+        <a href="/politicasdeprivacidad">Política de Privacidad</a>
+        |
+        <a href="/tyccompras">Términos & Condiciones de Compra</a>
+    </p>
 </section>
