--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -9,64 +9,75 @@
     <header>
         <%- include('../includes/header') %>
     </header>
+    <div class="help">
+        <section class="registro">
 
-    <section class="registro">
-        <form action="/register/guardar" method="post">
-            <p>
-                <label for="Nombre">Nombre: </label>
-                <input type="text" name="name" id="Nombre" placeholder="Nombre">
-            </p>
-            <p>
-                <label for="Apellido">Apellido: </label>
-                <input type="text" name="lastname" id="Apellido" placeholder="Apellido">
-            </p>
-            <p>
-                <!-- Check si existe -->
-                <label for="Provincia">Provincia: </label>
-                <input type="text" name="province" id="Provincia" placeholder="Provincia">
-            </p>
-            <p>
-                <!-- Check si existe -->
-                <label for="Localidad">Localidad: </label>
-                <input type="text" name="location" id="Localidad" placeholder="Localidad">
-            </p>
-            <p>
-                <label for="Codigo Postal">Codigo Postal: </label>
-                <input type="text" name="codpostal" id="Codigo Postal" placeholder="Codigo Postal">
-            </p>
-            <p>
-                <label for="Direccion">Dirección: </label>
-                <input type="text" name="address" id="Direccion" placeholder="Direccion">
-            </p>
-            <p>
-                <label for="Email">Email: </label>
-                <input type="email" name="email" id="Email" placeholder="Email">
-            </p>
-            <p>
-                <label for="Password">Contraseña: </label>
-                <input type="password" name="password" id="Password" placeholder="Contraseña">
-            </p>
-            <p>
-                <!--Check coincidencia entre ambas contraseñas-->
-                <label for="RPassword">Repetir Contraseña: </label>
-                <input type="password" id="RPassword" placeholder="Repite tu contraseña">
-            </p>
-            <p>
-                <label for="legal">Soy mayor de edad</label>
-                <input type="checkbox" name="legal" value="1" id="legal">
-            </p>
-            <p>
-                <label for="condiciones">Acepto los terminos y condiciones del sitio</label>
-                <input type="checkbox" name="conditions" value="1" id="condiciones">
-            </p>
+            <h2>
+                Crea tu cuenta
+            </h2>
 
-            <div>
-                <input class="button" type="submit" value="Registrar">
-                <input class="button" type="reset" value="Borrar">
+            <form action="/register/guardar" method="post">
+                <div id="ParteA">
+                    <p>
+                        <label for="Nombre">Nombre: </label>
+                        <input type="text" name="name" id="Nombre" placeholder="Nombre">
+                    </p>
+                    <p>
+                        <label for="Apellido">Apellido: </label>
+                        <input type="text" name="lastname" id="Apellido" placeholder="Apellido">
+                    </p>
+                    <p>
+                        <!-- Check si existe -->
+                        <label for="Provincia">Provincia: </label>
+                        <input type="text" name="province" id="Provincia" placeholder="Provincia">
+                    </p>
+                    <p>
+                        <!-- Check si existe -->
+                        <label for="Localidad">Localidad: </label>
+                        <input type="text" name="location" id="Localidad" placeholder="Localidad">
+                    </p>
+                    <p>
+                        <label for="Codigo Postal">Codigo Postal: </label>
+                        <input type="text" name="codpostal" id="Codigo Postal" placeholder="Codigo Postal">
+                    </p>
+                    <p>
+                        <label for="Direccion">Dirección: </label>
+                        <input type="text" name="address" id="Direccion" placeholder="Direccion">
+                    </p>
+                    <p>
+                        <label for="Email">Email: </label>
+                        <input type="email" name="email" id="Email" placeholder="Email">
+                    </p>
+                    <p>
+                        <label for="Password">Contraseña: </label>
+                        <input type="password" name="password" id="Password" placeholder="Contraseña">
+                    </p>
+                    <p>
+                        <!--Check coincidencia entre ambas contraseñas-->
+                        <label for="RPassword">Repetir Contraseña: </label>
+                        <input type="password" id="RPassword" placeholder="Repite tu contraseña">
+                    </p>
+                </div>
+                <div id="ParteB">
+                    <p>
+                        <label for="legal">Soy mayor de edad</label>
+                        <input type="checkbox" name="legal" value="1" id="legal">
+                    </p>
+                    <p>
+                        <label for="condiciones">Acepto los terminos y condiciones del sitio</label>
+                        <input type="checkbox" name="conditions" value="1" id="condiciones">
+                    </p>
+                </div>
+                <div id="ParteC">
+                    <input class="button" type="submit" value="Registrar">
+                </div>
+            </form>
+
+            <div class="log">
+                <p>Ya tienes una cuenta? <a href="/login"> Inicia sesión aquí</a></p>
             </div>
-        </form>
-    </section>
-
+        </section>
+    </div>
 
     <footer>
         <%- include('../includes/footer') %>
