--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -16,7 +16,18 @@
                 Ingresa en tu cuenta
             </h2>
 
-            <form action="/login/check" method="post">
+            <% if (typeof errors != 'undefined') { %>
+                <p style="color: red;">ERROR</p>
+                <ul>
+                    <% for( let i = 0; i < errors.length; i++ ) { %>
+                        <li>
+                            <%= errors[i].msg %> 
+                        </li>
+                    <% } %>
+                </ul>
+            <% } %>
+
+            <form action="/login" method="post">
                 <div id="ParteA">
                     <p>
                         <label for="Email">Email: </label>
