Estilizacion de errors.ejs

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -9,6 +9,7 @@
 
 <link rel="stylesheet" href="../css/indexStyle.css">
 <link rel="stylesheet" href="../css/registerStyle.css">
+<link rel="stylesheet" href="../css/errorsStyle.css">
 
 <title>Say Whisky!</title>
 <!--
