--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -84,6 +84,10 @@
                 </div>
             </form>
 
+            <form action="/register/guardar" method="post" enctype="multipart/form-data">
+                <input type="file" name="profileImage">
+            </form>
+
             <div class="log">
                 <p>Ya tienes una cuenta? <a href="/login"> Inicia sesión aquí</a></p>
             </div>
