app, rutas y controladores optimizados

--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -25,8 +25,8 @@
         </li>
         <li><a href="#" id="ingresar"><i class="fa-solid fa-user"></i></a></a>
             <ul>
-                <li><a href="/register" id="test">Register</a></li>
-                <li><a href="/login" id="test">Login</a></li>
+                <li><a href="/users/register" id="test">Register</a></li>
+                <li><a href="/users/login" id="test">Login</a></li>
             </ul>
         </li>
         <li><a href="/cart" id="cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
