--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -27,7 +27,7 @@
                 </ul>
             <% } %>
 
-            <form action="/register/guardar" method="post">
+            <form action="/users/register/guardar" method="post">
                 <div id="ParteA">
                     <p>
                         <label for="Nombre">Nombre: </label>
@@ -84,12 +84,12 @@
                 </div>
             </form>
 
-            <form action="/register/guardar" method="post" enctype="multipart/form-data">
+            <form action="/users/register/guardar" method="post" enctype="multipart/form-data">
                 <input type="file" name="profileImage">
             </form>
 
             <div class="log">
-                <p>Ya tienes una cuenta? <a href="/login"> Inicia sesión aquí</a></p>
+                <p>Ya tienes una cuenta? <a href="/users/login"> Inicia sesión aquí</a></p>
             </div>
         </section>
     </div>
